# fxbot3

./: .env.example  .gitignore  pyproject.toml  改善点.md  改善点2.md  改善点3.md  評価.md
.claude/: settings.local.json
config/: default_settings.yaml
docs/: 推敲.txt  改善点3.md  概要.txt  要件.txt  説明書2.md  説明書3.md
src/fxbot/: __main__.py  app.py  config.py  logger.py  notifier.py  profile_manager.py  trade_logger.py
src/fxbot/analysis/: __init__.py  strategy_advisor.py
src/fxbot/backtest/: engine.py  metrics.py  wfo.py
src/fxbot/features/: builder.py  momentum.py  price_action.py  regime.py  temporal.py  trend.py  volatility.py  volume.py
src/fxbot/gui/: main_window.py  workers.py
src/fxbot/gui/tabs/: __init__.py  backtest_tab.py  batch_train_tab.py  dashboard_tab.py  market_filter_tab.py  model_tab.py  pair_performance_tab.py  pair_selection_tab.py  settings_analysis_tab.py  settings_tab.py  shap_tab.py  strategy_analysis_tab.py  system_analysis_tab.py  trade_log_tab.py
src/fxbot/gui/widgets/: chart_widget.py  log_widget.py
src/fxbot/model/: labeling.py  monitor.py  predictor.py  registry.py  shap_analysis.py  trainer.py
src/fxbot/mt5/: connection.py  data_feed.py  execution.py  symbols.py
src/fxbot/risk/: portfolio.py  position_sizer.py  stop_manager.py
src/fxbot/strategy/: signal.py
tests/: conftest.py  test_backtest.py  test_features.py  test_model.py  test_risk.py
