[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fxbot"
version = "0.1.0"
description = "FX自動売買ボット — LightGBM + MT5"
requires-python = ">=3.11,<3.13"
dependencies = [
    "MetaTrader5>=5.0.45",
    "pandas>=2.1",
    "numpy>=1.24",
    "pyarrow>=14",
    "lightgbm>=4.1",
    "shap>=0.43",
    "scikit-learn>=1.3",
    "PySide6>=6.6",
    "matplotlib>=3.8",
    "pyyaml>=6.0",
    "ta>=0.11",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fxbot"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
